--- a/1Trimestre/UD03/docker-lamp/apache2-php/conf/phpmyadmin.conf
+++ b/1Trimestre/UD03/docker-lamp/apache2-php/conf/phpmyadmin.conf
@@ -1,16 +1,11 @@
-# apache2-php/conf/phpmyadmin.conf
-
 <VirtualHost *:8080>
-    ServerName daniel-perezserano-phpmyadmin.local
+    ServerName daniel-perezserrano-phpmyadmin.local
     DocumentRoot /var/www/html/phpmyadmin
 
-    <Directory /var/www/html/phpmyadmin>
-        Options Indexes FollowSymLinks
-        AllowOverride None
-
+    <Directory "/var/www/html/phpmyadmin">
         AuthType Basic
-        AuthName "Area Restringida"
-        AuthUserFile /etc/apache2/.htpasswd
+        AuthName "Restricted Access"
+        AuthUserFile /var/www/html/dist/htpasswd.dist
         Require valid-user
     </Directory>
 </VirtualHost>
