--- a/1Trimestre/UD03/docker-lamp/apache2-php/conf/000-default.conf
+++ b/1Trimestre/UD03/docker-lamp/apache2-php/conf/000-default.conf
@@ -1,9 +1,11 @@
 <VirtualHost *:80>
     ServerName daniel-perezserrano-www.local
+    ServerName www.local
     DocumentRoot /var/www/html
 
     <Directory /var/www/html>
         AllowOverride All
         Require all granted
     </Directory>
+
 </VirtualHost>
