--- a/1Trimestre/UD03/docker-lamp/apache2-php/conf/intranet.conf
+++ b/1Trimestre/UD03/docker-lamp/apache2-php/conf/intranet.conf
@@ -2,17 +2,20 @@
 Listen 8060
 
 <VirtualHost *:8060>
-    ServerName daniel-perezserranointranet.local
+    ServerName daniel-perezserrano-intranet.local
     DocumentRoot /var/www/html/intranet
 
     <Directory /var/www/html/intranet>
         Options Indexes FollowSymLinks
-        AllowOverride None
+        AllowOverride All
 
         AuthType Basic
         AuthName "Area Restringida"
-        # El archivo que contiene las contraseñas de acceso estará en el archivo .htpasswd en el directorio /etc/apache2
-        AuthUserFile /etc/apache2/.htpasswd
+        AuthUserFile /var/www/html/dist/htpasswd.dist
         Require valid-user
+
+        # Si deseas limitar el acceso solo a ciertas direcciones IP, puedes agregar Require ip aquí:
+        # Require ip 127.0.0.1
+        # Require ip 192.168.1.133
     </Directory>
 </VirtualHost>
