--- a/1Trimestre/UD03/docker-lamp/docker-compose.yml
+++ b/1Trimestre/UD03/docker-lamp/docker-compose.yml
@@ -5,30 +5,30 @@ services:
         image: mysql
         container_name: daweb-docker-lamp-mysql
         ports: 
-            - "3307:3306"
-        command: --default-authentication-plugin=mysql_native_password
+         - "3307:3306"
         environment:
-            MYSQL_DATABASE: ${MYSQL_ROOT_PASSWORD}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-        # Volumenes para que los datos de la base de datos persistan cuando se regenera el contenedor    
+            MYSQL_DATABASE: ${mydatabase}
+            MYSQL_PASSWORD: ${myuser}
+            MYSQL_ROOT_PASSWORD: ${myrootpassword}
         volumes:
             - ./mysql/dump:/docker-entrypoint-initdb.d
             - ./mysql/conf:/etc/mysql/conf.d
             - persistent:/var/lib/mysql
         networks:
             - default
-    # Servicio apache2 donde se instala un servidor web cuyo acceso está disponible por dos puertos 80 y 8086
+
+    # Servicio apache2 donde se instala un servidor web cuyo acceso está disponeble por dos puertos 80 y 8086
     www:
         build: ./apache2-php
         container_name: daweb-docker-lamp-apache2
-        ports:
+        ports: 
             - "80:80"
             - "8060:8060"
         volumes:
-    # ... (otros volúmenes)
+            # Volumen para que los archivos de configuración de los sitios web publicado sean copiados del disco local a su ubicación correcta dentro del contenedor
+            - ./apache2-php/www:/var/www/html
+            # Volumen para que los archivos de configuración de los virtual server sean copiados del disco local a su ubicación correcta dentro del contenedor
             - ./apache2-php/conf:/etc/apache2/sites-available
-            - ./dist:/var/www/html
         networks:
             - default
         depends_on:
@@ -38,23 +38,28 @@ services:
         image: phpmyadmin/phpmyadmin
         container_name: daweb-docker-lamp-phpmyadmin
         ports:
-            - 8000:80
+            - 8080:80
         environment:
-            MYSQL_USER: ${MYSQL_ROOT}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-            MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD} 
-            MYSQL_PORT: ${MYSQL_PORT} 
+            MYSQL_HOST: db
+            MYSQL_PORT: 3307
+            MYSQL_DATABASE: ${mydatabase}
+            MYSQL_USER: ${myuser}
+            MYSQL_PASSWORD: ${mypassword}
+        networks:
+            - default
         depends_on:
             - db
+
+    # Nuevo servicio para WordPress
     wordpress:
         image: wordpress
         container_name: daweb-docker-lamp-wordpress
         ports:
-            - "8081:80"  # Puedes ajustar el puerto según tus preferencias
+            - "8081:80"
         environment:
             WORDPRESS_DB_HOST: db
             WORDPRESS_DB_USER: root
-            WORDPRESS_DB_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+            WORDPRESS_DB_PASSWORD: ${mypassword}
             WORDPRESS_DB_NAME: wordpress
         volumes:
             - ./wordpress:/var/www/html
@@ -62,6 +67,7 @@ services:
             - default
         depends_on:
             - db
+
 # Configuración por defecto de los volumenes de python  
 volumes:
     persistent:
