--- a/1Trimestre/UD03/docker-lamp/apache2-php/conf/000-default.conf
+++ b/1Trimestre/UD03/docker-lamp/apache2-php/conf/000-default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName www.local
+    ServerName daniel-perezserrano-www.local
     DocumentRoot /var/www/html
 
     <Directory /var/www/html>
@@ -8,3 +8,6 @@
     </Directory>
 
 </VirtualHost>
+
+# Incluir configuración de phpMyAdmin
+Include conf/daniel-perezserrano-phpmyadmin.conf
